コードの最適化

--- a/package.json
+++ b/package.json
@@ -6,7 +6,10 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "lint": "eslint --ext .js,.vue src util public assets --max-warnings=0",
+    "lint:fix": "eslint --ext .js,.vue src util public assets --fix",
+    "format": "prettier --write \"**/*.{js,vue,css,scss,json,md,html}\""
   },
   "keywords": [],
   "author": "",
@@ -18,8 +21,13 @@
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^6.0.3",
+    "eslint": "^8.50.0",
+    "eslint-config-prettier": "^8.8.0",
+    "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-vue": "^10.7.0",
+    "prettier": "^2.8.8",
     "vite": "^7.3.1",
-    "vite-plugin-static-copy": "^3.2.0"
+    "vite-plugin-static-copy": "^3.2.0",
+    "vue-eslint-parser": "^10.2.0"
   }
 }
