--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
-    "lint": "eslint --ext .js,.ts,.vue src util public assets --max-warnings=0",
-    "lint:fix": "eslint --ext .js,.ts,.vue src util public assets --fix",
+    "lint": "eslint --ext .js,.ts,.vue src util --max-warnings=0",
+    "lint:fix": "eslint --ext .js,.ts,.vue src util --fix",
     "format": "prettier --write \"**/*.{js,ts,vue,css,scss,json,md,html}\"",
     "typecheck": "tsc --noEmit"
   },
