--- a/package.json
+++ b/package.json
@@ -22,11 +22,14 @@
   },
   "devDependencies": {
     "@types/node": "^25.1.0",
+    "@typescript-eslint/eslint-plugin": "^8.54.0",
+    "@typescript-eslint/parser": "^8.54.0",
     "@vitejs/plugin-vue": "^6.0.3",
     "eslint": "^8.50.0",
     "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-vue": "^10.7.0",
+    "husky": "^9.1.7",
     "prettier": "^2.8.8",
     "typescript": "^5.9.3",
     "vite": "^7.3.1",
